# rakuten.fr_multimodel

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirement.txt  save_dataset_to_db.py
models/: text_classifier.py
setup_scripts/: run_local_mlflow.sh  save_dataset_to_db.py  setup_images.py
src/: main.py  train_bart.py
src/callbacks/: callbacks.py
src/dataset/: data_loader.py  dataset.py  preprocess.py
src/features/: build_features.py
src/model/: fusion_model.py  image_classifier.py  text_classifier.py  train_model.py
tests/: test_callbacks.py  test_preprocessing.py
